# MLOPS_DDPM_G6

./: .gcloudignore  .gitignore  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt  tasks.py  vertex_ai_train.yaml
.dvc/: config
.github/workflows/: codecheck.yaml  codecov.yaml
configs/: cpu_config.yaml  sweep.yaml  train_config.yaml
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
outputs/2025-01-17/14-25-43/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-17/14-26-31/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-17/14-27-08/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-17/14-27-22/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-17/14-30-29/.hydra/: hydra.yaml
outputs/2025-01-17/14-30-56/.hydra/: hydra.yaml
outputs/2025-01-17/14-32-41/.hydra/: config.yaml  hydra.yaml
reports/: README.md  report.html
src/pokemon_ddpm/: __init__.py  api.py  data.py  evaluate.py  frontend.py  model.py  train.py  utils.py  visualize.py
tests/: test_api.py  test_data.py  test_model.py  test_train.py
